// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ChartIcon Component should handle basic icons, variations in settings: dash 1`] = `
<span
  class="curiosity-chartarea__icon curiosity-chartarea__icon-dash"
>
  <span
    class="curiosity-icon__dash"
    style="width: 2em; height: 1em;"
  >
    <svg
      aria-labelledby="lorem ipsum dash"
      height="100%"
      role="img"
      viewBox="0 0 38 10"
      width="100%"
    >
      <rect
        height="10"
        width="10"
        y="5"
      />
      <rect
        height="10"
        width="10"
        x="14"
        y="5"
      />
      <rect
        height="10"
        width="10"
        x="28"
        y="5"
      />
    </svg>
  </span>
</span>
`;

exports[`ChartIcon Component should handle basic icons, variations in settings: eye 1`] = `
<span
  class="curiosity-chartarea__icon curiosity-chartarea__icon-eye"
>
  <svg
    aria-label="hello world"
    aria-labelledby="icon-title-0"
    class="pf-v6-svg"
    fill="currentColor"
    height="1em"
    role="img"
    width="1em"
  >
    <title
      id="icon-title-0"
    >
      lorem ipsum eye
    </title>
    <svg
      class="pf-v6-icon-default"
      viewBox="0 0 576 512"
    >
      <path
        d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"
      />
    </svg>
    <svg
      class="pf-v6-icon-rh-ui"
      viewBox="0 0 32 32"
    >
      <path
        d="M16 10c-3.309 0-6 2.691-6 6s2.691 6 6 6 6-2.691 6-6-2.691-6-6-6Zm0 10c-2.206 0-4-1.794-4-4s1.794-4 4-4 4 1.794 4 4-1.794 4-4 4Zm14.79-4.665C30.009 13.776 25.625 6 16 6S1.991 13.776 1.209 15.336a1.472 1.472 0 0 0 0 1.328c.781 1.559 5.165 9.335 14.79 9.335s14.009-7.776 14.791-9.336a1.474 1.474 0 0 0 0-1.329ZM16 24c-8.049 0-11.937-6.222-12.882-8C4.064 14.222 7.951 8 16 8s11.938 6.224 12.882 8c-.946 1.778-4.833 8-12.882 8Z"
      />
    </svg>
  </svg>
</span>
`;

exports[`ChartIcon Component should handle basic icons, variations in settings: eyeSlash 1`] = `
<span
  class="curiosity-chartarea__icon curiosity-chartarea__icon-eyeSlash"
>
  <svg
    aria-labelledby="icon-title-1"
    class="pf-v6-svg"
    fill="currentColor"
    height="1em"
    role="img"
    width="1em"
  >
    <title
      id="icon-title-1"
    >
      lorem ipsum eyeSlash
    </title>
    <svg
      class="pf-v6-icon-default"
      viewBox="0 0 640 512"
    >
      <path
        d="M320 400c-75.85 0-137.25-58.71-142.9-133.11L72.2 185.82c-13.79 17.3-26.48 35.59-36.72 55.59a32.35 32.35 0 0 0 0 29.19C89.71 376.41 197.07 448 320 448c26.91 0 52.87-4 77.89-10.46L346 397.39a144.13 144.13 0 0 1-26 2.61zm313.82 58.1l-110.55-85.44a331.25 331.25 0 0 0 81.25-102.07 32.35 32.35 0 0 0 0-29.19C550.29 135.59 442.93 64 320 64a308.15 308.15 0 0 0-147.32 37.7L45.46 3.37A16 16 0 0 0 23 6.18L3.37 31.45A16 16 0 0 0 6.18 53.9l588.36 454.73a16 16 0 0 0 22.46-2.81l19.64-25.27a16 16 0 0 0-2.82-22.45zm-183.72-142l-39.3-30.38A94.75 94.75 0 0 0 416 256a94.76 94.76 0 0 0-121.31-92.21A47.65 47.65 0 0 1 304 192a46.64 46.64 0 0 1-1.54 10l-73.61-56.89A142.31 142.31 0 0 1 320 112a143.92 143.92 0 0 1 144 144c0 21.63-5.29 41.79-13.9 60.11z"
      />
    </svg>
    <svg
      class="pf-v6-icon-rh-ui"
      viewBox="0 0 32 32"
    >
      <path
        d="M16 22c-3.309 0-6-2.691-6-6a1 1 0 1 1 2 0c0 2.206 1.794 4 4 4a1 1 0 1 1 0 2Zm3.342 1.608c-1.06.26-2.184.392-3.342.392-8.047 0-11.937-6.223-12.882-8a16.482 16.482 0 0 1 3.448-4.354 1 1 0 1 0-1.332-1.492c-2.331 2.082-3.59 4.315-4.024 5.181a1.476 1.476 0 0 0 0 1.33C1.992 18.224 6.378 26 16 26c1.318 0 2.603-.151 3.818-.448a1 1 0 1 0-.476-1.943Zm11.365 7.099a.997.997 0 0 1-1.414 0l-6.812-6.812-.006-.006L1.293 2.707a.999.999 0 1 1 1.414-1.414L9.004 7.59C11.16 6.538 13.508 6 16 6c9.622 0 14.008 7.776 14.79 9.335.211.423.211.907 0 1.329-.516 1.03-2.38 4.329-5.995 6.718l5.911 5.911a.999.999 0 0 1 0 1.414ZM20 16c0-2.206-1.794-4-4-4a3.99 3.99 0 0 0-2.022.563l5.459 5.459A3.99 3.99 0 0 0 20.001 16Zm3.337 5.923c3.22-2.002 5.007-4.92 5.545-5.924C27.936 14.222 24.046 8 16 8c-1.94 0-3.772.384-5.477 1.109l2.002 2.002A5.977 5.977 0 0 1 16 10c3.309 0 6 2.691 6 6 0 1.26-.393 2.462-1.111 3.475l2.448 2.448Z"
      />
    </svg>
  </svg>
</span>
`;

exports[`ChartIcon Component should handle basic icons, variations in settings: infinity 1`] = `
<span
  class="curiosity-chartarea__icon curiosity-chartarea__icon-infinity"
>
  <span
    class="curiosity-icon__f-infinity"
    style="font-size: 1.5em;"
    title="lorem ipsum infinity"
  >
    <span
      aria-hidden="true"
    >
      ∞
    </span>
  </span>
</span>
`;

exports[`ChartIcon Component should handle basic icons, variations in settings: threshold 1`] = `
<span
  class="curiosity-chartarea__icon curiosity-chartarea__icon-threshold"
>
  <span
    class="curiosity-icon__threshold"
    style="width: 6em; height: 3em;"
  >
    <svg
      aria-hidden="true"
      height="100%"
      role="img"
      viewBox="0 0 18 10"
      width="100%"
    >
      <line
        stroke="#ff0000"
        stroke-dasharray="4,3"
        stroke-width="3"
        x1="0"
        x2="144"
        y1="24"
        y2="24"
      />
    </svg>
  </span>
</span>
`;

exports[`ChartIcon Component should render a basic component: basic 1`] = `
<span
  className="curiosity-chartarea__icon curiosity-chartarea__icon-square"
>
  <SquareIcon
    noDefaultStyle={false}
    size="sm"
  />
</span>
`;
